lucene search + preconditions

--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -27,10 +27,10 @@ edit#:#Edit
 export#:#Export
 set_not_attempted#:#Set LP Status to not attempted
 set_in_progress#:#Set LP Status to in progress
-set_passed#:#Set LP Status to not passed
+set_passed#:#Set LP Status to not completed
 set_failed#:#Set LP Status to not failed
 lp_status_0#:#Not Attempted
 lp_status_1#:#In Progress
-lp_status_2#:#Passed
+lp_status_2#:#Completed
 lp_status_3#:#Failed
 lp_status_info#:#Attention: Setting the LP Status will set the LP status of the currently logged in user to the chosen Stauts. THE STATUS OF EVERY OTHER USER WILL BE SET TO NOT ATTEMPTED!
