Fixed a bug when reinstalling the plugin. Added some lang vars, added a form for the content representation.

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -4,7 +4,7 @@ obj_xtst_duplicate#:#Kopieren
 objs_xtst_duplicate#:#Kopiere Test Repository Objects
 obj_xtst_select#:#Wähle Test Repository Object
 xtst_add#:#Test Repository Object hinzufügen
-xtst_new#:#Neues New Test Repository Object
+xtst_new#:#Neues Test Repository Object
 xtst_read#:#Lesezugriff auf Test Repository Object
 xtst_write#:#Test Repository Object bearbeiten
 xtst_delete#:#Test Repository Object löschen
@@ -25,15 +25,19 @@ content#:#Inhalt
 copy#:#Kopieren
 edit#:#Bearbeiten
 export#:#Export
-set_not_attempted#:#Setze LP Status auf "Nicht Versucht"
-set_in_progress#:#Setze LP Status auf "In Bearbeitung"
-set_passed#:#Setze LP Status auf "Bestanden"
-set_failed#:#Setze LP Status auf "Nicht Bestanden"
-set_completed#:#Setze LP Status auf "Durchgeführt"
+set_not_attempted#:#Setze Lernfortschritt auf "Nicht Versucht"
+set_in_progress#:#Setze Lernfortschritt auf "In Bearbeitung"
+set_passed#:#Setze Lernfortschritt auf "Bestanden"
+set_failed#:#Setze Lernfortschritt auf "Nicht Bestanden"
+set_completed#:#Setze Lernfortschritt auf "Durchgeführt"
 lp_status_0#:#Nicht Versucht
 lp_status_1#:#In Bearbeitung
 lp_status_2#:#Durchgeführt
 lp_status_3#:#Nicht Bestanden
 lp_status_#:#Kein Status gesetzt.
-lp_status_info#:#Achtung, wenn Sie den Lernzustand Ändern so wird der Lernfortschritt für diesen Benutzer bearbeitet UND alle anderen Benutzer auf "Nicht Teilgenommen" gesetzt! Mit der Lucenesuche wird dieses Objekt gefunden, wenn man nach dem Titel der Beschreibung oder dem Begriff "Repoplugin" sucht.
+lp_status_info#:#Achtung, wenn Sie den Lernfortschritt ändern so wird der Lernfortschritt für diesen Benutzer bearbeitet UND alle anderen Benutzer auf "Nicht Teilgenommen" gesetzt! Mit der Lucenesuche wird dieses Objekt gefunden, wenn man nach dem Titel, der Beschreibung oder dem Begriff "Repoplugin" sucht.
 offline:#:Offline
+important#:#Wichtig
+online_status#:#Online Status
+lp_status#:#Lernfortschritt
+update_successful#:Die Änderungen wurden gespeichert.
