--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -43,3 +43,6 @@ lp_status#:#Lernfortschritt
 update_successful#:Die Änderungen wurden gespeichert.
 news_title#:#Titel (en)
 news_content#:#Inhalt (en)
+xtst_copy#:#Test Repository Object kopieren
+offline#:#Offline
+status#:#Status
