--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -43,3 +43,6 @@ lp_status#:#Learning Progress
 update_successful#:#Update Successful
 news_title#:#Title (en)
 news_content#:#Content (en)
+xtst_copy#:#Copy Test Repository Object
+offline#:#Offline
+status#:#Status
